Fix notification-bar link spacing

--- a/assets/sass/protocol/components/_notification-bar.scss
+++ b/assets/sass/protocol/components/_notification-bar.scss
@@ -35,7 +35,6 @@
         display: inline-block;
         font-size: inherit;
         font-weight: 700;
-        margin: 0 $spacing-sm;
 
         &:hover,
         &:active,
